refactor: changes dto to a record